--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -119,8 +119,9 @@
     "        mu = Lambda(lambda t: K.l2_normalize(t, axis=-1), name=\"mu\")(mu)\n",
     "\n",
     "        kappa = Dense(512, activation=\"relu\")(x)\n",
-    "        kappa = Dense(1, activation=\"relu\", name=\"kappa\")(kappa)\n",
-    "\n",
+    "        kappa = Dense(1, activation=\"relu\")(kappa)\n",
+    "        kappa = Lambda(lambda t: K.squeeze(t, 1), name=\"kappa\")(kappa) \n",
+    "        \n",
     "        return tfp.layers.DistributionLambda(\n",
     "            make_distribution_fn=lambda params: tfd.VonMisesFisher(mean_direction=params[0],\n",
     "                                                                   concentration=params[1]),\n",
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +202,13 @@
     "    sample_dir=\"../subjects/992774/samples/fa7c02604b92de5f32cd3b61dbc2f8b7\",\n",
     "    max_n_samples=np.inf,\n",
     "    batch_size = 128,\n",
-    "    epochs = 3,\n",
+    "    epochs = 1,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1013 17:02:35.806654 139978367727360 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W1014 13:01:35.505799 139703451047680 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
      ]
@@ -236,29 +237,26 @@
       "__________________________________________________________________________________________________\n",
       "dense_2 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
+      "dense_4 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
       "dense_3 (Dense)                 (None, 3)            1539        dense_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
+      "dense_5 (Dense)                 (None, 1)            513         dense_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
       "mu (Lambda)                     (None, 3)            0           dense_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "kappa (Dense)                   (None, 1)            513         dense_4[0][0]                    \n",
+      "kappa (Lambda)                  (None,)              0           dense_5[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "distribution_lambda (Distributi ((None, None, 3), (N 0           mu[0][0]                         \n",
+      "distribution_lambda (Distributi ((None, 3), (None, 3 0           mu[0][0]                         \n",
       "                                                                 kappa[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 2,120,708\n",
       "Trainable params: 2,120,708\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n",
-      "Epoch 1/3\n",
-      "37456/37456 [==============================] - 244s 7ms/step - loss: -1.1705\n",
-      "Epoch 2/3\n",
-      "37456/37456 [==============================] - 241s 6ms/step - loss: -1.2431\n",
-      "Epoch 3/3\n",
-      "37456/37456 [==============================] - 240s 6ms/step - loss: -1.2749\n",
-      "Saving ../models/entrack_conditional/7b5ee612a5df9f2447a27eff48382649/config.yml\n",
-      "Saving ../models/entrack_conditional/7b5ee612a5df9f2447a27eff48382649/model.h5\n"
+      "37456/37456 [==============================] - 270s 7ms/step - loss: -1.4761\n",
+      "Saving ../models/entrack_conditional/8d5593b08d4548286cc8564373e82e11/config.yml\n",
+      "Saving ../models/entrack_conditional/8d5593b08d4548286cc8564373e82e11/model.h5\n"
      ]
     }
    ],
