Copy vout instead of object reference

--- a/entrack/inference_t.ipynb
+++ b/entrack/inference_t.ipynb
@@ -145,7 +145,7 @@
     "        if i == 0:\n",
     "            vin = prior(xyz[:,0,:])\n",
     "        else:\n",
-    "            vin = vout\n",
+    "            vin = vout.copy()\n",
     "        \n",
     "        if config[\"predict_fn\"] == \"mean\":\n",
     "            vout = model(np.hstack([vin,d])).mean().numpy()\n",
