Propagate fibers in both directions, but stitch both ends together

--- a/entrack/inference_t.ipynb
+++ b/entrack/inference_t.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,11 @@
     "    \n",
     "    def xyz2ijk(coords):\n",
     "        coords = np.hstack([coords, np.zeros((len(coords),1))])\n",
-    "        return dwi_img.coordmap.inverse()(coords).round().astype(int)[:, :3]\n",
+    "        ijk = dwi_img.coordmap.inverse()(coords).round().astype(int)[:, :3]\n",
+    "        return np.clip(ijk,\n",
+    "                       np.tile([0,0,0], (len(ijk), 1)),\n",
+    "                       np.tile(dwi.shape[:3], (len(ijk), 1)) - 1\n",
+    "        )\n",
     "    \n",
     "    # Define Fiber Termination\n",
     "    \n",
@@ -85,9 +89,7 @@
     "                self.scalar = scalar_img.get_data()\n",
     "            else:\n",
     "                raise NotImplementedError # TODO: Implement termination model\n",
-    "                \n",
     "            self.threshold = config[\"terminator\"][1]\n",
-    "                \n",
     "        def __call__(self, ijk):\n",
     "            if hasattr(self, \"scalar\"):\n",
     "                return np.where(self.scalar[ijk[:,0],ijk[:,1],ijk[:,2]] < self.threshold)[0]\n",
@@ -97,10 +99,10 @@
     "    terminator = Terminator()\n",
     "    \n",
     "    seeds = np.load(os.path.join(subject_dir, config[\"seeds\"]))\n",
-    "    if config[\"reverse_start\"]:\n",
-    "        seeds = np.vstack([seeds, seeds])\n",
+    "    # Duplicate seeds for positive and negative starting direction\n",
+    "    seeds = np.vstack([seeds, seeds])\n",
     "    \n",
-    "    # Define First Step Prior\n",
+    "    # Define Prior for First Fiber Direction\n",
     "    \n",
     "    class Prior(object):\n",
     "        def __init__(self):\n",
@@ -113,12 +115,8 @@
     "        def __call__(self, xyz):\n",
     "            if hasattr(self, \"peak\"):\n",
     "                ijk = xyz2ijk(xyz)\n",
-    "                \n",
-    "                if config[\"reverse_start\"]:\n",
-    "                    return self.peak[ijk[:,0],ijk[:,1],ijk[:,2]] * np.repeat([[1],[-1]], len(ijk)/2, axis=0)\n",
-    "                else:\n",
-    "                    return self.peak[ijk[:,0],ijk[:,1],ijk[:,2]]\n",
-    "                \n",
+    "                # Assuming that seeds have been duplicated\n",
+    "                return self.peak[ijk[:,0],ijk[:,1],ijk[:,2]] * np.repeat([[1],[-1]], len(ijk)/2, axis=0)\n",
     "            elif hasattr(self, \"model\"):\n",
     "                raise NotImplementedError # TODO: Implement prior model\n",
     "        \n",
@@ -137,7 +135,8 @@
     "    \n",
     "    ijk = xyz2ijk(seeds)\n",
     "    xyz = seeds.reshape(-1, 1, 3) # [fiber, pt, coo]\n",
-    "    fibers = []\n",
+    "    fiber_idx = np.hstack([np.arange(len(seeds)//2), np.arange(len(seeds)//2)])\n",
+    "    fibers = [[] for _ in range(len(seeds)//2)]\n",
     "    for i in range(config[\"max_steps\"]):\n",
     "        \n",
     "        d = dwi[ijk[:,0], ijk[:,1], ijk[:,2], :]\n",
@@ -155,25 +154,51 @@
     "        \n",
     "        rout = (xyz[:,-1,:] + config[\"step_size\"] * vout).reshape(-1, 1, 3)\n",
     "        \n",
-    "        xyz = np.concatenate((xyz, rout), axis=1)\n",
+    "        xyz = np.concatenate([xyz, rout], axis=1)\n",
     "        \n",
     "        ijk = xyz2ijk(xyz[:,-1,:])\n",
     "        \n",
     "        terminal_indices = terminator(ijk)\n",
     "\n",
     "        for idx in terminal_indices:\n",
-    "            fibers.append(xyz[idx])\n",
-    "        \n",
+    "            gidx = fiber_idx[idx]\n",
+    "            # Other end not yet added\n",
+    "            if not fibers[gidx]:\n",
+    "                fibers[gidx].append(xyz[idx])\n",
+    "            # Other end already added\n",
+    "            else:\n",
+    "                this_end = xyz[idx]\n",
+    "                other_end = fibers[gidx][0]\n",
+    "                merged_fiber = np.vstack([np.flip(this_end[1:], axis=0), other_end]) # stitch ends together\n",
+    "                fibers[gidx] = [merged_fiber]\n",
+    "                \n",
     "        xyz = np.delete(xyz, terminal_indices, axis=0)\n",
     "        vout = np.delete(vout, terminal_indices, axis=0)\n",
+    "        fiber_idx = np.delete(fiber_idx, terminal_indices)\n",
+    "        \n",
     "        ijk = xyz2ijk(xyz[:,-1,:])\n",
     "        \n",
-    "        print(\"Finished {:3.0f}%\".format(100*(i+1)/config[\"max_steps\"]), end=\"\\r\")\n",
-    "    \n",
-    "        if len(fibers) == len(seeds):\n",
+    "        print(\"Step {:4d}/{}, finished {:5d}/{:5d} ({:3.0f}%) of all seeds.\".format(\n",
+    "            (i+1), config[\"max_steps\"], len(seeds)-len(fiber_idx), len(seeds),\n",
+    "            100*(1-len(fiber_idx)/len(seeds))), end=\"\\r\")\n",
+    "\n",
+    "        if len(fiber_idx) == 0:\n",
     "            break\n",
     "    \n",
+    "    # Include unfinished fibers:\n",
+    "    \n",
+    "    for idx, gidx in enumerate(fiber_idx):\n",
+    "        if not fibers[gidx]:\n",
+    "            fibers[gidx].append(xyz[idx])\n",
+    "        else:\n",
+    "            this_end = xyz[idx]\n",
+    "            other_end = fibers[gidx][0]\n",
+    "            merged_fiber = np.vstack([np.flip(this_end[1:], axis=0), other_end])\n",
+    "            fibers[gidx] = [merged_fiber]\n",
+    "    \n",
     "    # Save Result\n",
+    "    \n",
+    "    fibers = [f[0] for f in fibers]\n",
     "    \n",
     "    tractogram = Tractogram(\n",
     "        streamlines=ArraySequence(fibers),\n",
@@ -183,7 +208,7 @@
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "    fiber_path = os.path.join(save_dir, \"fibers.trk\")\n",
-    "    print(\"Saving {}\".format(fiber_path))\n",
+    "    print(\"\\nSaving {}\".format(fiber_path))\n",
     "    nib.streamlines.save(tractogram, fiber_path)\n",
     "\n",
     "    config_path = os.path.join(save_dir, \"config.yml\")\n",
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +240,7 @@
     "    dwi_path=\"fod.nii.gz\",\n",
     "    prior=\"peak.nii.gz\",\n",
     "    seeds=\"seeds/bcc2e734e49c597e25ece8a3d499d060/seeds.npy\",\n",
-    "    terminator=[\"fa.nii.gz\", 0.5],\n",
-    "    reverse_start=True,\n",
+    "    terminator=[\"fa.nii.gz\", 0.21],\n",
     "    predict_fn=\"mean\",\n",
     "    step_size=0.2,\n",
     "    max_steps=500\n",
@@ -225,15 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving ../subjects/992774/predicted_fibers/ee59e8958a4ec9bcc6b4afe37be4013c/fibers.trk\n",
-      "Saving ../subjects/992774/predicted_fibers/ee59e8958a4ec9bcc6b4afe37be4013c/config.yml\n"
+      "Step  500/500, finished 360701/364160 ( 99%) of all seeds.\n",
+      "Saving ../subjects/992774/predicted_fibers/f13ac4341f570118dd1de8dd3b424303/fibers.trk\n",
+      "Saving ../subjects/992774/predicted_fibers/f13ac4341f570118dd1de8dd3b424303/config.yml\n"
      ]
     }
    ],
