Clean up agreement

--- a/agreement.ipynb
+++ b/agreement.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "    n_batches = np.ceil(n_samples / batch_size).astype(int)\n",
     "    \n",
     "    local_agreement = np.array([])\n",
-    "    for i in range(3):#n_batches):\n",
+    "    for i in range(n_batches):\n",
     "    \n",
     "        posterior_1 = model_1(samples_1[\"inputs\"][i*batch_size:(i+1)*batch_size])\n",
     "        posterior_2 = model_2(samples_1[\"inputs\"][i*batch_size:(i+1)*batch_size])\n",
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
     "    subject = \"992774\",\n",
-    "    sample_dirs = [\"fa7c02604b92de5f32cd3b61dbc2f8b7\", \"samples_2\"],\n",
+    "    sample_dirs = [\"fa7c02604b92de5f32cd3b61dbc2f8b7\", \"samples_3\"],\n",
     "    model_dirs = [\"entrack_conditional/8d5593b08d4548286cc8564373e82e11\",\n",
     "                  \"entrack_conditional/8d5593b08d4548286cc8564373e82e11\"]\n",
     ")"
@@ -142,27 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving subjects/992774/agreement/a0f910610ec7b183514e22fad9bace7c/config.yml\n"
-     ]
-    }
-   ],
-   "source": [
-    "local_agreement = agreement(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "local_agreement = agreement(config)"
+   ]
   }
  ],
  "metadata": {
