--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -261,7 +261,33 @@
     }
    ],
    "source": [
+    "# TODO: Implement validation set + scoring\n",
     "model = train_model(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=190536, shape=(5, 3), dtype=float32, numpy=\n",
+       "array([[ 0.47958416,  0.8244671 ,  0.30042145],\n",
+       "       [ 0.46007687,  0.68369097,  0.5664768 ],\n",
+       "       [ 0.80774355,  0.553578  , -0.20273554],\n",
+       "       [ 0.5488573 ,  0.7383294 , -0.39195067],\n",
+       "       [ 0.6753007 ,  0.70020163, -0.23170364]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(np.random.rand(5,18)).mean_direction"
    ]
   },
   {
