--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -78,7 +78,7 @@
     "    outputs = []\n",
     "    done=False\n",
     "    for fi, f in enumerate(tracts):  \n",
-    "        for i, r in enumerate(f.streamline[1:-1]): # Exclude end points\n",
+    "        for i, r in enumerate(f.streamline[1:-1]): # Exclude end points for conditional model\n",
     "            \n",
     "            try:\n",
     "                idx = xyz2ijk(r) # anchor idx\n",
