--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,22 @@
     "import warnings\n",
     "\n",
     "from hashlib import md5\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_samples(config):\n",
     "    \"\"\"\"\"\"\n",
+    "    if config[\"block_size\"] % 2 == 0:\n",
+    "        raise ValueError(\"block_size must be an odd number (1, 3, 5,...)\")\n",
+    "    \n",
     "    subject_dir = os.path.join(\"subjects\", config[\"subject\"])\n",
     "    \n",
     "    trk_path = os.path.join(subject_dir, config[\"trk_path\"])\n",
@@ -53,14 +57,14 @@
     "    save_dir = os.path.join(subject_dir, \"samples\", hasher.hexdigest())\n",
     "    if os.path.exists(save_dir):\n",
     "        print(\"Samples with this config have been created already:\\n{}\".format(save_dir))\n",
-    "        return\n",
+    "        return None, None\n",
     "    \n",
     "    tracts = nib.streamlines.load(trk_path).tractogram # coordinates in mmRAS+ space\n",
     "    assert tracts.data_per_point is not None\n",
     "    assert \"t\" in tracts.data_per_point\n",
     "    \n",
     "    dwi_img = ni.load_image(dwi_path)\n",
-    "    xyz2ijk = lambda r: dwi_img.coordmap.inverse()([r[0], r[1], r[2], 0]).round().astype(int)\n",
+    "    xyz2ijk = lambda r: dwi_img.coordmap.inverse()([r[0], r[1], r[2], 0])[:3]\n",
     "    dwi = dwi_img.get_data()\n",
     "\n",
     "    n_fibers = len(tracts)\n",
@@ -82,7 +86,25 @@
     "            \n",
     "            try:\n",
     "                idx = xyz2ijk(r) # anchor idx\n",
-    "                d = dwi[idx[0], idx[1], idx[2], :]\n",
+    "                IDX = np.round(idx).astype(int)\n",
+    "                \n",
+    "                values = np.zeros([3, 3, 3,\n",
+    "                                   config[\"block_size\"], config[\"block_size\"], config[\"block_size\"],\n",
+    "                                   dwi.shape[-1]])\n",
+    "                \n",
+    "                for x in range(config[\"block_size\"]):\n",
+    "                    for y in range(config[\"block_size\"]):\n",
+    "                        for z in range(config[\"block_size\"]):\n",
+    "                            values[x, y, z,:] = dwi[\n",
+    "                                IDX[0] + x - 2 * (config[\"block_size\"] // 2) : IDX[0] + x + 1,\n",
+    "                                IDX[1] + y - 2 * (config[\"block_size\"] // 2) : IDX[1] + y + 1,\n",
+    "                                IDX[2] + z - 2 * (config[\"block_size\"] // 2) : IDX[2] + z + 1,\n",
+    "                                :]\n",
+    "                fn = RegularGridInterpolator(([-1,0,1],[-1,0,1],[-1,0,1]), values)\n",
+    "                \n",
+    "                d = fn([idx[0]-IDX[0], idx[1]-IDX[1], idx[2]-IDX[2]])[0]\n",
+    "                d = d.flatten() # to get back the spatial order: reshape(bs, bs, bs, dwi.shape[-1])\n",
+    "                \n",
     "            except IndexError:\n",
     "                n_samples -= (2 if config[\"reverse_samples\"] else 1)\n",
     "                print(\"Index error at r={}, idx={}, fiber_idx={}\\n\".format(r,idx,perm[fi]) +\n",
@@ -111,7 +133,7 @@
     "\n",
     "    assert n_samples == len(inputs)\n",
     "    assert n_samples == len(outputs)\n",
-    "    assert inputs[0].shape == (3 + dwi_img.shape[-1], )\n",
+    "    assert inputs[0].shape == (3 + dwi_img.shape[-1] * config[\"block_size\"]**3, )\n",
     "    assert outputs[0].shape == (3, )\n",
     "\n",
     "    os.makedirs(save_dir)\n",
@@ -132,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,22 +163,23 @@
     "    sample_type=\"conditional_t\",\n",
     "    dwi_path = \"fod.nii.gz\",\n",
     "    trk_path = \"resampled_fibers/CC_smooth=5_npts=auto.trk\",\n",
+    "    block_size = 3,\n",
     "    reverse_samples = True,\n",
-    "    max_n_samples = np.inf,\n",
+    "    max_n_samples = 1000,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving subjects/992774/samples/fa7c02604b92de5f32cd3b61dbc2f8b7/samples.npz\n",
-      "Saving subjects/992774/samples/fa7c02604b92de5f32cd3b61dbc2f8b7/config.yml\n"
+      "Samples with this config have been created already:\n",
+      "subjects/992774/samples/40b9069c14f30aefc8fc14e9143964b5\n"
      ]
     }
    ],
